--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "start": "concurrently \"npm run start:backend\" \"npm run start:frontend\""
   },
   "dependencies": {
+    "@vercel/edge-config": "^1.4.0",
     "concurrently": "^8.0.1",
     "cors": "^2.8.5",
     "ethers": "^5.7.2",
     "express": "^4.18.2",
     "http-server": "^14.1.1"
   }
-} 
+}
