--- a/vercel.json
+++ b/vercel.json
@@ -18,7 +18,7 @@
   "crons": [
     {
       "path": "/api/cron/update-leaderboard",
-      "schedule": "0 0,30 * * *"
+      "schedule": "0,30 * * * *"
     }
   ]
 } 
