--- a/backend/package.json
+++ b/backend/package.json
@@ -8,11 +8,12 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "@vercel/edge-config": "^1.4.0",
     "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "ethers": "^6.7.1"
+    "ethers": "^6.7.1",
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
   }
-} 
+}
