--- a/vercel.json
+++ b/vercel.json
@@ -6,19 +6,24 @@
       "use": "@vercel/node",
       "config": {
         "memory": 1024,
-        "maxDuration": 60
+        "maxDuration": 300
       }
     },
     { "src": "frontend/**/*", "use": "@vercel/static" }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "backend/server.js" },
+    { 
+      "src": "/api/(.*)", 
+      "dest": "backend/server.js",
+      "headers": {
+        "Access-Control-Allow-Origin": "*",
+        "Access-Control-Allow-Methods": "GET, POST, OPTIONS",
+        "Access-Control-Allow-Headers": "Content-Type"
+      }
+    },
     { "src": "/(.*)", "dest": "frontend/$1" }
   ],
-  "crons": [
-    {
-      "path": "/api/cron/update-leaderboard",
-      "schedule": "0 12 * * *"
-    }
-  ]
+  "env": {
+    "NODE_ENV": "production"
+  }
 } 
