--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,20 @@
 {
   "version": 2,
   "builds": [
-    { "src": "frontend/**/*", "use": "@vercel/static" }
+    { 
+      "src": "frontend/**/*",
+      "use": "@vercel/static"
+    }
   ],
   "routes": [
-    { "src": "/(.*)", "dest": "frontend/$1" }
+    { 
+      "src": "/static/(.*)",
+      "headers": { "cache-control": "public, max-age=0, must-revalidate" },
+      "dest": "/frontend/static/$1"
+    },
+    { 
+      "src": "/(.*)",
+      "dest": "/frontend/$1"
+    }
   ]
 } 
